[project]
name = "fed-grants-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
